Colab kullanılarak oluşturuldu

--- a/09_Morfolojik_İşlemler.ipynb
+++ b/09_Morfolojik_İşlemler.ipynb
@@ -52,6 +52,19 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Google Drive'ınızı bağlamak için kullanılır.\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "AvkGlyy3fAaT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "LnBs6Zs2WP3o"
       },
@@ -78,7 +91,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/denklem.png')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -118,7 +131,7 @@
       "source": [
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/genlesme.png')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -159,7 +172,7 @@
       "source": [
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/morfolojik.png')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -228,7 +241,7 @@
         "\n",
         "#Alternatif olarak, değiştirilmiş görüntüyü cv2.imwrite (isim, img) işleviyle de kaydedebiliriz."
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -277,7 +290,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/aşınma.png')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -317,7 +330,7 @@
       "source": [
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/morfolojik.png')"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -386,7 +399,7 @@
         "\n",
         "#Alternatif olarak, değiştirilmiş görüntüyü cv2.imwrite (isim, img) işleviyle de kaydedebiliriz."
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -435,7 +448,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/acma.png')"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -477,7 +490,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/morfolojik2.png')"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -554,7 +567,7 @@
         "\n",
         "#Alternatif olarak, değiştirilmiş görüntüyü cv2.imwrite (isim, img) işleviyle de kaydedebiliriz.\n"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -603,7 +616,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/kapama.png')"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -644,7 +657,7 @@
       "source": [
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/morfolojik3.png')"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -723,7 +736,7 @@
         "#Alternatif olarak, değiştirilmiş görüntüyü cv2.imwrite (isim, img) işleviyle de kaydedebiliriz.\n",
         "\n"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -772,7 +785,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/yapısal_eleman1.png')"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -813,7 +826,7 @@
       "source": [
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/denklem2.png')"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -852,7 +865,7 @@
       "source": [
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/denklem3.png')"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -891,7 +904,7 @@
       "source": [
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/sekil1.6.png')"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -941,7 +954,7 @@
       "source": [
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/cicek_gray.png')"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1004,7 +1017,7 @@
         "\n",
         "cv2.imwrite(\"/content/gri_asinma.jpg\",erosion)"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1074,7 +1087,7 @@
         "\n",
         "cv2.imwrite(\"/content/gri_genlesme.jpg\",dilation)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1123,7 +1136,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/suzgec_maskesi.png')"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
