Colab kullanılarak oluşturuldu

--- a/07_Bayesian_Sınıflandırması.ipynb
+++ b/07_Bayesian_Sınıflandırması.ipynb
@@ -49,6 +49,19 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Google Drive'ınızı bağlamak için kullanılır.\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "Znb-aAlEf0QG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "Dk01Onm1NUZI"
       },
@@ -64,7 +77,7 @@
         "image = Image.open(BytesIO(response.content))\n",
         "#image değişkeninin içerisine belirtilen klasörde bulunan 'bayesian’' adlı resim dosyası atılır."
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +94,7 @@
         "#@title bayesian.jpg dosyanın orjinal hali\n",
         "display(image)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -185,7 +198,7 @@
         "#Görüntünün son hali belirlenen klasöre kaydedilir.\n",
         "\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +215,7 @@
         "#@title bayesian_yeni.jpg dosyası\n",
         "display(image)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
