Colab kullanılarak oluşturuldu

--- a/04_Otsu_Eşikleme_Yöntemi.ipynb
+++ b/04_Otsu_Eşikleme_Yöntemi.ipynb
@@ -57,6 +57,19 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Google Drive'ınızı bağlamak için kullanılır.\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "th4aH4r3gaAs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "G6NHSj-KI12s",
         "outputId": "28cc3a7c-d261-464a-c265-9ff2f8bd1855",
@@ -69,7 +82,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/cicek.png')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -127,7 +140,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/otsuBG.png')\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -177,7 +190,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/frml.png')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,7 +230,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/otsufg.png')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,7 +283,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/otsufrml2.png')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +332,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/forml4.png')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -350,7 +363,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/frml3.png')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,7 +429,7 @@
         "\n",
         "#resim değişkeninin içerisine belirtilen klasörde bulunan 'otsu' adlı resim dosyası atılır.\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -433,7 +446,7 @@
         "#@title cicek.jpg dosyanın orjinal hali\n",
         "display(resim)\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -475,7 +488,7 @@
         "#Resim dosyasını yüklenen matrisin tüm elemanlarına(piksellerine) ağırlık toplama yöntemine göre bulunan gri renk kodu atılır. Böylece resmin her pikseli renk tonuna göre gri rengini almış olacaktır. Burada kırmızı, yeşil, mavi renk tonlarının hepsine aynı değer atılır. Bu yöntem gri rengini elde etmemizi sağlar.\n",
         "resim.save(\"/content/cicek_gri.jpg\")"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -492,7 +505,7 @@
         "#@title Oluşacak cicek_gri.jpg dosyası\n",
         "display(resim)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -531,7 +544,7 @@
         "     return histogram\n",
         "#Geri dönüş değeri olan histogramda iç içe döngülerin sonucunda resmin üzerinde bulunan her pikseldeki renk tonunu ayrı ayrı tutulmuş oldu..\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -595,7 +608,7 @@
         "#En yüksek varyansa sahip olan histogram elemanının indisini de eşik değeri olarak 'threshold' değişkenine atılır.\n",
         "     return threshold\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -606,7 +619,7 @@
       "source": [
         "res = Image.open(\"/content/cicek_gri.jpg\")"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -637,7 +650,7 @@
         "res.save(\"/content/cicek_yeni.jpg\")\n",
         "#Otsu algoritmasıyla işlenen görüntü, projenin belirtilen adresine kaydedilir.\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -662,7 +675,7 @@
         "#@title cicek_yeni.jpg dosyanın orjinal hali\n",
         "display(res)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
