Colab kullanılarak oluşturuldu

--- a/03_Medyan_Filtreleme.ipynb
+++ b/03_Medyan_Filtreleme.ipynb
@@ -89,6 +89,19 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Google Drive'ınızı bağlamak için kullanılır.\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "vOdz7kmAgrFr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "LagySdmtEZTX"
       },
@@ -98,7 +111,7 @@
         "\n",
         "#PIL modülünden Image kütüphanesi uygulamaya dahil edilir."
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +128,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/03_medyan1.png')"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -146,7 +159,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/03_medyan2.png')\n"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -186,7 +199,7 @@
         "from IPython.display import Image\n",
         "Image(url='https://raw.githubusercontent.com/mervebudakk/python/master/images/03_medyan3.png')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
